# navi

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  LICENSE  README.md  commitlint.config.cjs  dist-workspace.toml  install.sh  justfile  package-lock.json  package.json  stack.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  code-review.yml  e2e-gitea.yml  e2e.yml  publish-crates.yml  release.yml
.husky/: pre-commit
assets/: app-info.yml  slack-manifest.json
crates/navi-notifier/: Cargo.toml  README.md
crates/navi-notifier-core/: Cargo.toml
crates/navi-notifier-core/src/: config.rs  engine.rs  error.rs  lib.rs  model.rs  rules.rs  traits.rs
crates/navi-notifier-discord/: Cargo.toml
crates/navi-notifier-discord/src/: lib.rs  render.rs
crates/navi-notifier-discord/tests/: deliver.rs
crates/navi-notifier-email/: Cargo.toml
crates/navi-notifier-email/src/: lib.rs
crates/navi-notifier-forge/: Cargo.toml
crates/navi-notifier-forge/src/: diff.rs  diff_tests.rs  lib.rs  model.rs  snapshot.rs
crates/navi-notifier-gitea/: Cargo.toml
crates/navi-notifier-gitea/src/: api.rs  lib.rs  source.rs
crates/navi-notifier-gitea/tests/: poll.rs
crates/navi-notifier-gitea/tests/common/: mod.rs
crates/navi-notifier-github/: Cargo.toml
crates/navi-notifier-github/src/: api.rs  diff.rs  diff_tests.rs  lib.rs  notification.rs  snapshot.rs  source.rs
crates/navi-notifier-github/tests/: poll.rs
crates/navi-notifier-github/tests/common/: mod.rs
crates/navi-notifier-gitlab/: Cargo.toml
crates/navi-notifier-gitlab/src/: api.rs  lib.rs  mr_diff.rs  mr_diff_tests.rs  todo_tests.rs
crates/navi-notifier-gitlab/tests/: poll.rs
crates/navi-notifier-slack/: Cargo.toml
crates/navi-notifier-slack/src/: lib.rs  render.rs
crates/navi-notifier-slack/tests/: deliver.rs
crates/navi-notifier/src/: cli.rs  completions.rs  config.rs  config_cmd.rs  doctor.rs  e2e_common.rs  editor.rs  envfile.rs  guided.rs  logs.rs  main.rs  prompt.rs  providers.rs  service.rs  setup.rs  state.rs  test_cmd.rs  upgrade.rs  wiring.rs
deploy/: dev.navi.navi.plist  navi.service
docs/: CODE_REVIEW_BOT.md  SMOKE_TEST.md
