[workspace]
resolver = "2"
members = [
    "crates/navi-notifier-core",
    "crates/navi-notifier-forge",
    "crates/navi-notifier-github",
    "crates/navi-notifier-gitea",
    "crates/navi-notifier-gitlab",
    "crates/navi-notifier-slack",
    "crates/navi-notifier-discord",
    "crates/navi-notifier",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/lararosekelley/navi"
homepage = "https://github.com/lararosekelley/navi"

# cargo-release settings. All crates share one version, and cargo-release rewrites
# the internal cross-crate dependency requirements (see [workspace.dependencies]
# below) to match on every bump, so they can never drift. Publishing to crates.io
# is left to CI (publish-crates.yml, on tag), so `cargo release` only bumps the
# versions, commits, tags v<version>, and pushes.
[workspace.metadata.release]
shared-version = true
consolidate-commits = true
dependent-version = "upgrade"
tag-name = "v{{version}}"
pre-release-commit-message = "chore(release): release v{{version}}"
publish = false
push = true
tag = true
allow-branch = ["main"]

[workspace.dependencies]
# Internal (version required so the crates are publishable to crates.io)
navi-notifier-core = { path = "crates/navi-notifier-core", version = "0.1.1" }
navi-notifier-forge = { path = "crates/navi-notifier-forge", version = "0.1.1" }
navi-notifier-github = { path = "crates/navi-notifier-github", version = "0.1.1" }
navi-notifier-gitea = { path = "crates/navi-notifier-gitea", version = "0.1.1" }
navi-notifier-gitlab = { path = "crates/navi-notifier-gitlab", version = "0.1.1" }
navi-notifier-slack = { path = "crates/navi-notifier-slack", version = "0.1.1" }
navi-notifier-discord = { path = "crates/navi-notifier-discord", version = "0.1.1" }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
async-trait = "0.1"
futures = "0.3"

# HTTP / providers
octocrab = "0.44"
slack-morphism = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI / config discovery
clap = { version = "4", features = ["derive"] }
directories = "5"

# Observability / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Time
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

[workspace.lints.clippy]
# Keep the default-ish posture; deny obvious mistakes.

# The profile cargo-dist builds release artifacts with.
[profile.dist]
inherits = "release"
lto = "thin"
