[package]
name = "navi-notifier-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Provider-agnostic domain model, traits, and engine for navi PR-review alerts."

[dependencies]
async-trait.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true

[dev-dependencies]
tokio = { workspace = true }
