[package]
name = "navi-notifier-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared diff engine and model for navi's GitHub/Gitea-style forge sources."

[dependencies]
navi-notifier-core.workspace = true
serde.workspace = true
time.workspace = true
