[package]
name = "navi-notifier-github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GitHub source for navi: notifications polling + PR timeline diffing."

[dependencies]
navi-notifier-core.workspace = true
async-trait.workspace = true
octocrab.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
time.workspace = true
anyhow.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
