[package]
name = "navi-notifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A friendly helper to guide you through the day-to-day noise of code review."
readme = "README.md"
keywords = ["github", "slack", "notifications", "pull-request", "cli"]
categories = ["command-line-utilities", "development-tools"]
default-run = "navi"
exclude = [
    ".github/**",
    ".husky/**",
    "node_modules/**",
    "target/**",
    "package.json",
    "package-lock.json",
    "commitlint.config.cjs",
]

# The user-facing binary is `navi`, even though the published crate is
# `navi-notifier` (the short name was taken on crates.io).
[[bin]]
name = "navi"
path = "src/main.rs"

# Live end-to-end smoke harness. Gated so it never ships in the release binary
# or the published crate; only the e2e workflow builds it.
[[bin]]
name = "navi-e2e"
path = "src/bin/navi-e2e.rs"
required-features = ["e2e"]

# Hermetic Gitea -> Mailpit e2e (Dockerized, no external accounts).
[[bin]]
name = "navi-e2e-gitea"
path = "src/bin/navi-e2e-gitea.rs"
required-features = ["e2e"]

[features]
# End-to-end harnesses. Pulls the HTTP helpers they need to drive the providers.
e2e = ["dep:reqwest", "dep:base64"]

[dependencies]
navi-notifier-core.workspace = true
navi-notifier-github.workspace = true
navi-notifier-gitea.workspace = true
navi-notifier-gitlab.workspace = true
navi-notifier-slack.workspace = true
navi-notifier-discord.workspace = true
navi-notifier-email.workspace = true

tokio.workspace = true
async-trait.workspace = true
clap.workspace = true
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_mangen = "0.2"
directories.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
time.workspace = true

# e2e-only HTTP helpers for driving providers / asserting delivery.
reqwest = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
